syntax = "proto3";

package com.sample.auth;

option java_multiple_files = true;
option java_package = "com.sample.auth.grpc";
option java_outer_classname = "AuthProto";

service AuthService {
  rpc login(LoginRequest) returns (LoginResponse);
  rpc register(RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string message = 1;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  string message = 1;
}
